<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eco-planner</string>
    <string name="intro_text">Login</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in_button">Sign In</string>
    <string name="email_hint_text">Enter your Email Address</string>
    <string name="password_hint_text">Enter a Password</string>
    <string name="reenter_password_hint_text">Re-enter your Password</string>


</resources>
